--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
       <div class="banner-container">
         <h1 class="title">
-          Unlimited movies, TV shows,<br />
-          and more
+          new title
         </h1>
         <h2 class="subtitle">Watch anywhere. Cancel anytime.</h2>
         <h3 class="email-text">
